# guardian-type-enforcer

./: .gitignore  LICENSE  README.MD  README.md  benchmark.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
guardian/: __init__.py  _compiler.py  _serialization.py  compiler.py  dataclasses.py  deepguard.py  guard.py  guard_set.py  shield.py  strictguard.py
src/: _guardian_core.c
tests/: test.py  test_guardian.py  test_guardian_suite.py
