[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-type-enforcer"
version = "2.0.0"
description = "Maximum performance runtime type enforcement using CPython C API."
readme = "README.MD"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Senior Python Engineer" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "beartype>=0.16.0", "typeguard>=4.1.0"]